--- a/server/settlement/pom.xml
+++ b/server/settlement/pom.xml
@@ -11,9 +11,9 @@
     </parent>
 
     <groupId>com.mg.server</groupId>
-    <artifactId>report</artifactId>
+    <artifactId>settlement</artifactId>
 
-    <name>MBSA::Server::Report</name>
+    <name>MBSA::Server::Settlement</name>
     <description/>
 
     <dependencies>
@@ -29,23 +29,27 @@
         </dependency>
         <dependency>
             <groupId>com.mg.server</groupId>
-            <artifactId>baiengine</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
+            <artifactId>reference</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>com.mg.server</groupId>
+            <artifactId>documentcore</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.ibm.icu</groupId>
-            <artifactId>icu4j</artifactId>
+            <groupId>com.mg.server</groupId>
+            <artifactId>docflow</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>document</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>account</artifactId>
             <scope>provided</scope>
         </dependency>
 
@@ -57,26 +61,9 @@
             <groupId>jboss</groupId>
             <artifactId>jboss-jmx</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.eclipse.birt.core</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.birt.report.engine</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.birt.report.model</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.datatools.connectivity</groupId>
-            <artifactId>oda</artifactId>
-            <scope>provided</scope>
+            <groupId>jboss</groupId>
+            <artifactId>jboss-annotations-ejb3</artifactId>
         </dependency>
     </dependencies>
 </project>
