--- a/server/datawarehouse/pom.xml
+++ b/server/datawarehouse/pom.xml
@@ -11,9 +11,9 @@
     </parent>
 
     <groupId>com.mg.server</groupId>
-    <artifactId>report</artifactId>
+    <artifactId>datawarehouse</artifactId>
 
-    <name>MBSA::Server::Report</name>
+    <name>MBSA::Server::DataWarehouse</name>
     <description/>
 
     <dependencies>
@@ -32,6 +32,11 @@
             <artifactId>baiengine</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>reference</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -39,44 +44,40 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.1_3</version>
+        </dependency>
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm-attrs</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.6</version>
+        </dependency>
+        <!--
+        <dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>mfreference</artifactId>
+            <scope>provided</scope>
+        </dependency>-->
+        <!--<dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>documentcore</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.ibm.icu</groupId>
-            <artifactId>icu4j</artifactId>
+            <groupId>com.mg.server</groupId>
+            <artifactId>document</artifactId>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>jboss</groupId>
-            <artifactId>jboss-system</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>jboss</groupId>
-            <artifactId>jboss-jmx</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.birt.core</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.birt.report.engine</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.birt.report.model</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.datatools.connectivity</groupId>
-            <artifactId>oda</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
