--- a/server/documentcore/pom.xml
+++ b/server/documentcore/pom.xml
@@ -42,5 +42,11 @@
             <artifactId>report</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
