--- a/server/mfreference/pom.xml
+++ b/server/mfreference/pom.xml
@@ -11,9 +11,9 @@
     </parent>
 
     <groupId>com.mg.server</groupId>
-    <artifactId>report</artifactId>
+    <artifactId>mfreference</artifactId>
 
-    <name>MBSA::Server::Report</name>
+    <name>MBSA::Server::MFReference</name>
     <description/>
 
     <dependencies>
@@ -32,50 +32,25 @@
             <artifactId>baiengine</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
+            <groupId>com.mg.server</groupId>
+            <artifactId>reference</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>documentcore</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>warehouse</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.ibm.icu</groupId>
-            <artifactId>icu4j</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>jboss</groupId>
-            <artifactId>jboss-system</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>jboss</groupId>
-            <artifactId>jboss-jmx</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.birt.core</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.birt.report.engine</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.birt.report.model</groupId>
-            <artifactId>api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.datatools.connectivity</groupId>
-            <artifactId>oda</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
