--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>server</module>
+        <!--<module>distribution</module>-->
     </modules>
 
     <organization/>
@@ -46,7 +47,7 @@
 
         <wiki.server>${tracker.server}</wiki.server>
         <wiki.port/>
-        <wiki.space/>
+        <wiki.space>${tracker.project.name}</wiki.space>
 
         <maven.repo.server>${dev.server}</maven.repo.server>
         <maven.repo.server.port>8084</maven.repo.server.port>
@@ -55,12 +56,12 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>dd.MM.yyyy' 'HH:mm:ss</maven.build.timestamp.format>
 
-        <!-- <src.dir>src/main/java</src.dir>
+         <src.dir>src/main/java</src.dir>
          <res.dir>src/main/resources</res.dir>
          <src.scripts.dir>src/main/scripts</src.scripts.dir>
          <assembly.dir>src/assembly</assembly.dir>
          <test.src.dir>src/test/java</test.src.dir>
-         <test.res.dir>src/test/resources</test.res.dir>-->
+         <test.res.dir>src/test/resources</test.res.dir>
 
         <jboss.version>4.2.2.GA</jboss.version>
         <jboss.ejb.version>4.2.1.GA</jboss.ejb.version>
@@ -84,7 +85,7 @@
 
     <ciManagement>
         <system>Jenkins</system>
-        <url>${ci.server}:${ci.server.port}/jenkins/job/mbsa/</url>
+        <url>http://${ci.server}:${ci.server.port}/jenkins/job/mbsa/</url>
     </ciManagement>
 
     <issueManagement>
@@ -270,6 +271,62 @@
                             <addMavenDescriptor>${add.maven.descriptor}</addMavenDescriptor>
                         </archive>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>ejb</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                            <configuration>
+                                <jarName>${project.artifactId}-${project.version}-ejb</jarName>
+                                <excludes>
+                                    <exclude>**/ui/**</exclude>
+                                    <exclude>**/model/**</exclude>
+                                    <exclude>**/*.xml</exclude>
+                                    <exclude>**/*.properties</exclude>
+                                </excludes>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>ui</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                            <configuration>
+                                <jarName>${project.artifactId}-${project.version}-ui</jarName>
+                                <includes>
+                                    <include>**/ui/**</include>
+                                    <include>**/*.xml</include>
+                                    <include>**/*.properties</include>
+                                </includes>
+                                <excludes>
+                                    <exclude>META-INF/*.properties</exclude>
+                                </excludes>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>wb</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                            <configuration>
+                                <jarName>${project.artifactId}-${project.version}-wb</jarName>
+                                <excludes>
+                                    <exclude>**/wb/**</exclude>
+                                    <exclude>**/ulc/**/*.class</exclude>
+                                    <exclude>**/LicenseServer.class</exclude>
+                                    <exclude>**/LicenseControllerImpl*.class</exclude>
+                                    <exclude>**/LicenseControllerLocator.class</exclude>
+                                    <exclude>**/LicenseControllerService.class</exclude>
+                                    <exclude>**/LicenseControllerServiceMBean.class</exclude>
+                                    <exclude>**/service/*DatabaseConverter*</exclude>
+                                </excludes>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
