--- a/common/uicomponent/build.xml
+++ b/common/uicomponent/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build-community.xml,v 1.1 2008/02/27 09:52:47 safonov Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="User interface components">
