--- a/server/crm/build.xml
+++ b/server/crm/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build.xml,v 1.9 2006/11/23 18:44:56 poroxnenko Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="CRM module">
