--- a/server/datawarehouse/build.xml
+++ b/server/datawarehouse/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build.xml,v 1.4 2006/09/27 13:42:05 safonov Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="Data warehouse">
