--- a/server/factura/build.xml
+++ b/server/factura/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build.xml,v 1.9 2006/11/23 19:02:43 poroxnenko Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="Factura module">
