--- a/server/framework/build.xml
+++ b/server/framework/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build.xml,v 1.30 2008/03/18 10:38:42 safonov Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="Millennium Group framework">
