--- a/server/mbsawebapp/build.xml
+++ b/server/mbsawebapp/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build-community.xml,v 1.2 2008/02/26 09:02:20 safonov Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="MBSA web client module">
