--- a/server/planning/build.xml
+++ b/server/planning/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build.xml,v 1.10 2007/07/30 10:35:11 safonov Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="Planning module">
