--- a/server/workbench/build.xml
+++ b/server/workbench/build.xml
@@ -2,8 +2,8 @@
 <!-- $Id: build.xml,v 1.4 2007/04/11 07:07:58 poroxnenko Exp $ -->
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../../build/etc/common.xml">
-  <!ENTITY module SYSTEM "file:../../build/etc/module.xml">
+  <!ENTITY common SYSTEM "../../build/etc/common.xml">
+  <!ENTITY module SYSTEM "../../build/etc/module.xml">
 ]>
 
 <project default="all" name="Workbench module">
