--- a/workbench/com.mg.merp.wb.badi.library/build.xml
+++ b/workbench/com.mg.merp.wb.badi.library/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../common.xml">
+  <!ENTITY common SYSTEM "../common.xml">
 ]>
 
 <project default="all" name="Millennium Workbench Business Add-in Library">
