--- a/workbench/com.mg.merp.wb.entitymapper/build.xml
+++ b/workbench/com.mg.merp.wb.entitymapper/build.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE project [
-  <!ENTITY common SYSTEM "file:../common.xml">
+  <!ENTITY common SYSTEM "../common.xml">
 ]>
 
   	
