--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
+### Ant
+output/
+*.log
+*.MANIFEST.MF
+*.build.number
